Added interface support to JsonAPI